# PMC_Automation_Tools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py  test.py
api/: common.py  datasource.py
api/classic/: datasource.py
api/ux/: datasource.py
common/: exceptions.py  utils.py  wait_until.py
driver/: common.py
driver/classic/: driver.py
driver/ux/: driver.py
examples/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_5.sql  popup_table_extract.js  popup_table_extract_format.py
login/: login.py
pmc_automation_tools/: __init__.py
pmc_automation_tools/api/: common.py  datasource.py
pmc_automation_tools/api/classic/: datasource.py
pmc_automation_tools/api/ux/: datasource.py
pmc_automation_tools/common/: __init__.py  exceptions.py  utils.py
pmc_automation_tools/driver/: common.py  generic.py
pmc_automation_tools/driver/classic/: driver.py
pmc_automation_tools/driver/ux/: driver.py
pmc_automation_tools/src/Plex_Login/: README.md
pmc_automation_tools/src/UX_Data_Source_Tools/: README.md
src/Plex_Login/: plex_login_ux.py  requirements.txt
src/UX_Data_Source_Tools/: README.md  requirements.txt  ux_data_source_tools.py
